// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/Text Field Default 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className={null}
  >
     
    Nama Lengkap
     
  </label>
  <input
    disabled={false}
    name="Nama Lengkap"
    onChange={[Function]}
    placeholder="Nama sesuai dengan KTP"
    required={false}
    type="text"
    value={null}
  />
</div>
`;

exports[`Storyshots Input/Text Field Default Value 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className={null}
  >
     
    Nama Lengkap
     
  </label>
  <input
    defaultValue="Test"
    disabled={false}
    name="Nama Lengkap"
    onChange={[Function]}
    placeholder="Nama sesuai dengan KTP"
    required={false}
    type="text"
    value={null}
  />
</div>
`;

exports[`Storyshots Input/Text Field Disabled 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className={null}
  >
     
    Nama Lengkap
     
  </label>
  <input
    disabled={true}
    name="Nama Lengkap"
    onChange={[Function]}
    placeholder="Nama sesuai dengan KTP"
    required={false}
    type="text"
    value={null}
  />
</div>
`;

exports[`Storyshots Input/Text Field Error 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className={null}
  >
     
    Nama Lengkap
     
  </label>
  <input
    disabled={false}
    name="Nama Lengkap"
    onChange={[Function]}
    placeholder="Nama sesuai dengan KTP"
    required={false}
    type="text"
    value={null}
  />
  <span
    className="error"
  >
    Nama lengkap tidak boleh kosong
  </span>
</div>
`;

exports[`Storyshots Input/Text Field Required 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className="required"
  >
     
    Nama Lengkap
     
  </label>
  <input
    disabled={false}
    name="Nama Lengkap"
    onChange={[Function]}
    placeholder="Nama sesuai dengan KTP"
    required={true}
    type="text"
    value={null}
  />
</div>
`;
